[tool.poetry]
name = "fastapi-depends"
version = "1.1.0"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}
uvicorn = "^0.32.0"
redis = "^5.1.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
psycopg = "^3.2.3"
faker = "^30.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
